Fixed issue with text alignment

--- a/css/mediator/main.sass
+++ b/css/mediator/main.sass
@@ -662,6 +662,7 @@ code
   border: 1px solid #e8e8e8
   border-radius: 3px
   background-color: #eef
+  text-align: left
 
 code
   padding: 1px 5px
